# isonim-gpui

./: .gitignore  Justfile  README.md  flake.nix  isonim_gpui.nimble  nim.cfg
.github/workflows/: ci.yml
demos/task-manager/src/: main.nim
docs/: gpui-api-analysis.md  shim-design.md
nix/: sway-headless.conf
rust/: Cargo.toml
rust/gpui-nim-shim/: Cargo.toml
rust/gpui-nim-shim/src/: gpui_app.rs  gpui_headless.rs  lib.rs  render_sync.rs  tree.rs  window.rs
rust/gpui-nim-shim/tests/: gpui_rendering.rs  test_async_render.rs  test_headless_render.rs
scripts/: wayland-run-test.sh  xvfb-run-test.sh
src/isonim_gpui/: bindings.nim  renderer.nim  window.nim
tests/: test_basic.nim  test_bindings.nim  test_cross_renderer.nim  test_demo_app.nim  test_gui  test_gui.nim  test_performance.nim  test_render_integration.nim  test_renderer.nim  test_structural_comparison.nim
tools/: check_bindings.sh  generate_bindings.sh
